<resources>
    <string name="app_name">DAC-II</string>
    <string name="dealer_name">Name</string>
    <string name="registration_number">Registration Number</string>
    <string name="phone_number">Phone number</string>
    <string name="has_paid">Has paid</string>
    <string name="dealer_name_value">Dr ACHANTA RAMA KRISHNA SASANK SCANNING CENTRE PKL/NSP UNIT</string>
    <string name="registration_number_value">37062148813</string>
    <string name="phone_number_value">1234567890</string>
    <string name="has_paid_value">Yes</string>
    <string name="ptin">PTIN</string>
    <string name="gstin">GSTIN</string>
    <string name="address">Address</string>
    <string name="entry">Entry</string>
    <string name="email">Email</string>
    <string name="tax_paid_2017_2018">Tax paid 2017-2018</string>
    <string name="tax_paid_2018_2019">Tax paid 2018-2019</string>
    <string name="tax_paid_2019_2020">Tax paid 2019-2020</string>
    <string name="tax_paid_2020_2021">Tax paid 2020-2021</string>
    <string name="tax_paid_2021_2022">Tax paid 2021-2022</string>
    <string name="tax_paid_2022_2023">Tax paid 2022-2023</string>
    <string name="email_value">Mohamed.Khuthbuddin@relianceada.com</string>
    <string name="tax_value">2500</string>
    <string name="entry_value">Entry 11</string>
    <string name="address_value">3-1-21 , KOVILA STREET UPSTAIRS OF ANDHRA BANK , NSP</string>
    <string name="edr_value">23-07-2017</string>
    <string name="edr">EDR</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="not_paid_2017_2018">Not Paid 2017-2018</string>
    <string name="not_paid_2018_2019">Not paid 2018-2019</string>
    <string name="not_paid_2019_2020">Not paid 2019-2020</string>
    <string name="not_paid_2020_2021">Not paid 2020-2021</string>
    <string name="not_paid_2021_2022">Not paid 2021-2022</string>
    <string name="not_paid_2022_2023">Not paid 2022-2023</string>
    <string name="edit">Edit</string>
</resources>