<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/dealer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:scrollHorizontally="false"
        android:ellipsize="end"
        android:text="@string/dealer_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gstin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/gstin"
        android:textSize="13sp"
        android:textColor="#777"
        app:layout_constraintStart_toStartOf="@+id/dealer_name"
        app:layout_constraintTop_toBottomOf="@+id/dealer_name" />

    <TextView
        android:id="@+id/ptin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/ptin"
        android:textColor="#777"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/gstin"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/gstin"
        tools:layout_editor_absoluteX="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>